fix: fix title of lecture 14

--- a/lecture14/main.tex
+++ b/lecture14/main.tex
@@ -73,7 +73,7 @@
 \addbibresource{lecture14.bib}
 
 % title block
-\title{Variations on Stochastic Gradient Descent}
+\title{R Packages and Wrap-Up}
 \subtitle{Computational Statistics}
 \author{Johan Larsson}
 \institute{Department of Mathematical Sciences, University of Copenhagen}
