feat: add profile for teaching
The teaching profile enables side notes and incremental slides

--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,6 @@
 ---
 title: Computational Statistics
+format: html
 ---
 
 This is the resources web site for the Computational Statistics course. This is
