--- a/slides/lecture5.qmd
+++ b/slides/lecture5.qmd
@@ -2,15 +2,14 @@
 title: "Random Number Generation and Rejection Sampling"
 ---
 
+{{< include _common.qmd >}}
+
 ```{r setup, include=FALSE}
-library(tidyverse)
 library(profvis)
 
 knitr::read_chunk(here::here("R", "vMSim.R"))
 
 source(here::here("R/vMSim.R"), keep.source = TRUE)
-
-theme_set(theme_grey(base_size = 16))
 ```
 
 ## Questions from Last Time
