--- a/slides/lecture9.qmd
+++ b/slides/lecture9.qmd
@@ -2,6 +2,8 @@
 title: "Debugging and Likelihood Optimization"
 ---
 
+{{< include _common.qmd >}}
+
 ```{r setup, include=FALSE}
 
 error_hook <- knitr::knit_hooks$get("error")
@@ -16,13 +18,9 @@ knitr::knit_hooks$set(error = function(x, options) {
   error_hook(x, options)
 })
 
-library(tidyverse)
 library(patchwork)
 
-options(width = 80)
 old_options <- options(digits = 4)
-
-theme_set(theme_grey(base_size = 18))
 ```
 
 ## Today
